# Eclipsing-Binary-Stars

./: .gitignore  CMakeLists.txt  CMakePresets.json  makefile
lib/: fps_tracker.hpp  physics.hpp  simulation.hpp  star.hpp  star_face.hpp  star_mesh.hpp  utilities.hpp
lib/maths/: linear_algebra.hpp
src/: CMakeLists.txt  fps_tracker.cpp  main.cpp  physics.cpp  simulation.cpp  simulation.hpp  star.cpp  star_face.cpp  star_mesh.cpp  star_mesh.hpp  utilities.cpp
src/maths/: CMakeLists.txt  linear_algebra.cpp  linear_algebra.hpp
src/renderer/: renderer.hpp
